--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,20 @@
-# Core
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 pydantic==2.5.0
-
-# ML
+numpy==1.26.4
+pandas==2.1.3
 scikit-learn==1.3.2
 xgboost==2.0.2
-pandas==2.1.3
-numpy==1.26.2
-
-# Data generation
+imbalanced-learn==0.11.0
+shap==0.44.0
 faker==20.1.0
-
-# Utilities
 python-dotenv==1.0.0
 pyyaml==6.0.1
-
-# Development
+joblib==1.3.2
+matplotlib==3.8.2
+seaborn==0.13.0
 jupyter==1.0.0
 ipython==8.18.1
 pytest==7.4.3
 black==23.11.0
 ruff==0.1.6
-
-# Visualization
-matplotlib==3.8.2
-seaborn==0.13.0
